tests/script_errors/missing_function/error.txt
Error: 
    3 |     42
    4 |   end;
    5 | end;
    6 | snot::badger(event)
      | ^^^^^^^^^^^^^^^^^^^ Call to undefined function snot::badger